
* SOLR-15722: Delete Replica does not delete the Per replica state (noble)

* SOLR-15676: Fix PeerSync failure due to RealTimeGetComponent returning duplicates. (Ramsey Haddad, Christine Poerschke, David Smiley)

* SOLR-15766: MultiAuthPlugin should send non-AJAX anonymous requests to the plugin that allows anonymous requests (Timothy Potter, Eric Pugh)

Build
---------------------

* LUCENE-10104, SOLR-15631: Upgrade forbiddenapis to version 3.2.  (Uwe Schindler)

Other Changes
---------------------

* SOLR-15678: Allow only known content types in ShowFileRequestHandler (janhoy, Gus Heck, Mal Aware)

* SOLR-15697: Add ErrorLogMuter to test-framework, deprecating SolrException.ignorePatterns (hossman)

* SOLR-15761: Remove JdbcStream from Lang (Joel Bernstein)

======================= 8.10.1 =======================

Other Changes
---------------------
* SOLR-15677: Upgrade the following dependencies with vulnerabilities.
  - jetty: 9.4.44.v20210927
  - tika: 1.27
  - commons-compress: 1.21
  - netty: 4.1.68.Final
  - fasterxml.jackson: 2.12.3
  - errorprone: 2.9.0
  - gcp-client: 1.32.1
  (Houston Putman)
  
* SOLR-15269: Upgrade httpclient and httpmime to 4.5.13.  (ventry)

==================  8.10.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-15472: New shards.preference option for preferring replicas based on their leader status, i.e.
  `shards.preference=replica.leader:false` would prefer non-leader replicas. (wei wang via Timothy Potter)

* SOLR-15208: Add the countDist aggregation to the stats, facet and timeseries Streaming Expressions (Joel Bernstein)

* SOLR-15277: Schema Designer UI (Timothy Potter, Kiran Chitturi)

* SOLR-15527: Security screen in Admin UI for managing users, roles, and permissions (Timothy Potter)
