@@ -80,6 +80,14 @@ public class ShardBackupMetadata {
         return new ShardBackupMetadata();
     }
 
+    /**
+     * Reads a shard metadata file from a {@link BackupRepository} and parses the result into a {@link ShardBackupMetadata}
+     *
+     * @param repository the storage repository to read shard-metadata from
+     * @param dir URI for the 'shard_backup_metadata' directory of the backup to read from
+     * @param shardBackupId the ID of the shard metadata file to read
+     * @return a ShardBackupMetadata object representing the provided 'shardBackupId' if it could be found in 'dir', null otherwise
+     */
     public static ShardBackupMetadata from(BackupRepository repository, URI dir, ShardBackupId shardBackupId) throws IOException {
         final String shardBackupMetadataFilename = shardBackupId.getBackupMetadataFilename();
         if (!repository.exists(repository.resolve(dir, shardBackupMetadataFilename))) {
